--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 	<meta name="viewport" content="width=device-width,inital-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scale=no, shribk-to-fit=no">
 	<title>amizu</title>
 </head>
-<body><h1>hello world</h1></body>
+<body><h1>welcome to amizu</h1></body>
 </html>
