--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 	<meta name="viewport" content="width=device-width,inital-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scale=no, shribk-to-fit=no">
 	<title>amizu</title>
+	<style>
+		h1 {
+			color: blue;
+		}
+	</style>
 </head>
 <body><h1>welcome to amizu</h1></body>
 </html>
