--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 		}
 	</style>
 </head>
-	<script type="javascript" src="./index.js"></script>
-<body><h1>welcome to amizu</h1></body>
+	<script type="javascript" src="./js/index.js"></script>
+<body><img src="./images/top_bg.jpg" /><h1>welcome to amizu</h1></body>
 </html>
